--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ bin/org/pdmsys/screen/screens/SetLocation$2.class
 bin/org/.DS_Store
 bin/org/pdmsys/.DS_Store
 bin/org/pdmsys/screen/.DS_Store
+.project
